fix table question layout on mobile
uses idea from
http://css-tricks.com/examples/ResponsiveTables/responsive.php to rotate
the table content and put the headers back in using :before which is a
bit laborious but does avoid the tables blowing out the side of the
screen and being hard to use.

--- a/web/sass/app.scss
+++ b/web/sass/app.scss
@@ -466,6 +466,90 @@ ul[role="menu"] {
         }
     }
 
+    
+	
+    /*
+    pivot tables when on narrow screens and turn each row into a mini-table
+    based on http://css-tricks.com/examples/ResponsiveTables/responsive.php
+    */
+    @media
+    only screen and (max-width: 760px),
+    (min-device-width: 768px) and (max-device-width: 1024px)  {
+
+        /* Force table to not be like tables anymore */
+        table, thead, tbody, th, td, tr {
+            display: block;
+        }
+
+        /* Hide table headers (but not display: none;, for accessibility) */
+        thead tr {
+            position: absolute;
+            top: -9999px;
+            left: -9999px;
+        }
+
+        tr { border: 1px solid #ccc; }
+
+        td {
+            /* Behave  like a "row" */
+            border: none;
+            border-bottom: 1px solid #eee;
+            position: relative;
+            text-align: right;
+        }
+
+        td:before {
+            /* Now like a table header */
+            float: left;
+            padding-right: 10px;
+            text-align: left;
+        }
+
+        td:nth-of-type(1) {
+            padding-left: 0px;
+            width: 100%;
+            text-align: right;
+            font-weight: bold;
+        }
+
+        /*
+        Label the data
+         */
+        .groups {
+            td:nth-of-type(2):before { content: "Looked for information online or in person"; }
+            td:nth-of-type(3):before { content: "Joined or renewed membership, made a donation"; }
+            td:nth-of-type(4):before { content: "Attended events or meetings"; }
+            td:nth-of-type(5):before { content: "Done some voluntary work"; }
+        }
+
+        .satisfied {
+            td:nth-of-type(2):before { content: "Very satisfied"; }
+            td:nth-of-type(3):before { content: "Fairly satisfied"; }
+            td:nth-of-type(4):before { content: "Neither/not"; }
+            td:nth-of-type(5):before { content: "Fairly dissatisfied"; }
+            td:nth-of-type(6):before { content: "Very dissatisfied"; }
+        }
+
+        .have-done {
+            td:nth-of-type(2):before { content: "Have done"; }
+            td:nth-of-type(3):before { content: "Considered doing"; }
+            td:nth-of-type(4):before { content: "Have not done or considered doing"; }
+        }
+
+        .ever-contacted {
+            td:nth-of-type(2):before { content: "Yes, more than once"; }
+            td:nth-of-type(3):before { content: "Yes, once"; }
+            td:nth-of-type(4):before { content: "No, but I have considered it"; }
+            td:nth-of-type(5):before { content: "No, I have not done or considered it"; }
+        }
+
+        .ever-contacted2 {
+            td:nth-of-type(2):before { content: "Yes"; }
+            td:nth-of-type(3):before { content: "No, but I have considered it"; }
+            td:nth-of-type(4):before { content: "No, I have not done or considered it"; }
+        }
+    }
+	
     textarea {
         height: 10em;
     }
